# IbLahlou.github.io

./: 2025-11-18-acoustic-models.md  Dockerfile  README.md  Untitled 1.md  Untitled.md  _config.yml  certificate.html  contact.html  cv.html  download_to_graphics.py  elements.html  game.html  imgur_download_map.json  imgur_images.json  imgur_urls.txt  index.html  ping_pong_game.js  pong.html  projects.html  pyproject.toml  scrape_imgur_selenium.py  scrape_imgur_simple.py  shutdown.sh  start.sh
.obsidian/: app.json  graph.json  workspace.json
_data/: contact.yml
_includes/: head.html
_plugins/: mathjax_plugin.rb
_posts/: 2024-09-08-cace-principle.md  2024-09-08-drift-in-ml.md  2024-09-08-entanglement-and-cace-principle.md  2024-09-09-A-data-drift-in-ml.md  2024-09-09-A-data-drift-theory.md  2024-09-09-B-concept-drift-in-ml.md  2024-09-09-data-drift-overview.md  2024-09-10-batch-stream-Inferencing.md  2024-09-11-Convolutional-neural-networks.md  2024-09-11-data-scraping.md  2024-09-11-virtualization in Unix-based system.md  2024-09-23-language-history.md  2024-09-28-text-operations.md  2024-11-18-embedding-operations.md  2025-03-19-ML System Overview.md  2025-03-20-Planning in ML System.md  2025-09-29-big-time-series-fundamentals.md  2025-11-18-acoustic-models.md  2025-11-20-git-github-actions-devsecops.md  2025-12-14-chemical-physical-interactions-unified-models.md  2025-12-14-physics-informed-feature-engineering.md  2025-12-25-direct-acyclic-graphe-in-data-science.md  2025-12-30-RAG-principles-and-variants.md  2026-02-26-Encoding-in-Machine-Learning.md  (+1 more)
(+11 files in other folders)
